--- a/VendasWebMVC/Views/Departamentos/Create.cshtml
+++ b/VendasWebMVC/Views/Departamentos/Create.cshtml
@@ -4,7 +4,7 @@
     ViewData["Title"] = "Create";
 }
 
-<h2>Create</h2>
+<h2>Criar</h2>
 
 <h4>Departamento</h4>
 <hr />
@@ -25,7 +25,7 @@
 </div>
 
 <div>
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Index">Voltar na lista</a>
 </div>
 
 @section Scripts {
