--- a/VendasWebMVC/Views/Departamentos/Delete.cshtml
+++ b/VendasWebMVC/Views/Departamentos/Delete.cshtml
@@ -4,9 +4,9 @@
     ViewData["Title"] = "Delete";
 }
 
-<h2>Delete</h2>
+<h2>Deletar</h2>
 
-<h3>Are you sure you want to delete this?</h3>
+<h3>Tem certeza que deseja excluir?</h3>
 <div>
     <h4>Departamento</h4>
     <hr />
@@ -22,6 +22,6 @@
     <form asp-action="Delete">
         <input type="hidden" asp-for="Id" />
         <input type="submit" value="Delete" class="btn btn-default" /> |
-        <a asp-action="Index">Back to List</a>
+        <a asp-action="Index">Voltar na lista</a>
     </form>
 </div>
