--- a/VendasWebMVC/Views/Departamentos/Edit.cshtml
+++ b/VendasWebMVC/Views/Departamentos/Edit.cshtml
@@ -4,7 +4,7 @@
     ViewData["Title"] = "Edit";
 }
 
-<h2>Edit</h2>
+<h2>Editar</h2>
 
 <h4>Departamento</h4>
 <hr />
@@ -26,7 +26,7 @@
 </div>
 
 <div>
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Index">Voltar na lista</a>
 </div>
 
 @section Scripts {
