--- a/VendasWebMVC/Views/Vendedores/Editar.cshtml
+++ b/VendasWebMVC/Views/Vendedores/Editar.cshtml
@@ -10,25 +10,29 @@
 <div class="row">
     <div class="col-md-4">
         <form asp-action="Editar">
-            <input type="hidden" asp-for="Vendedor.Id"/>
+            <input type="hidden" asp-for="Vendedor.Id" />
             <div class="form-group">
                 <label asp-for="Vendedor.Nome" class="control-label"></label>
                 <input asp-for="Vendedor.Nome" class="form-control" />
+                <span asp-validation-for="Vendedor.Nome" class="text-danger"></span>
 
             </div>
             <div class="form-group">
                 <label asp-for="Vendedor.Email" class="control-label"></label>
                 <input asp-for="Vendedor.Email" class="form-control" />
+                <span asp-validation-for="Vendedor.Email" class="text-danger"></span>
 
             </div>
             <div class="form-group">
                 <label asp-for="Vendedor.DataNascimento" class="control-label"></label>
                 <input asp-for="Vendedor.DataNascimento" class="form-control" />
+                <span asp-validation-for="Vendedor.DataNascimento" class="text-danger"></span>
 
             </div>
             <div class="form-group">
                 <label asp-for="Vendedor.SalarioBase" class="control-label"></label>
                 <input asp-for="Vendedor.SalarioBase" class="form-control" />
+                <span asp-validation-for="Vendedor.SalarioBase" class="text-danger"></span>
 
             </div>
             <div class="form-group">
@@ -43,3 +47,9 @@
         </form>
     </div>
 </div>
+
+
+@section Scripts {
+    @{ await Html.RenderPartialAsync("_ValidationScriptsPartial");}
+}
+
