--- a/VendasWebMVC/Views/Shared/_Layout.cshtml
+++ b/VendasWebMVC/Views/Shared/_Layout.cshtml
@@ -33,6 +33,7 @@
                     <li><a asp-area="" asp-controller="Home" asp-action="Index">Home</a></li>
                     <li><a asp-area="" asp-controller="Departamentos" asp-action="Index">Departamentos</a></li>
                     <li><a asp-area="" asp-controller="Vendedores" asp-action="Index">Vendedores</a></li>
+                    <li><a asp-area="" asp-controller="VendasRecordes" asp-action="Index">Buscar</a></li>
                     <li><a asp-area="" asp-controller="Home" asp-action="About">Informação</a></li>
                     <li><a asp-area="" asp-controller="Home" asp-action="Contact">Contato</a></li>
                 </ul>
